# LAMA

./: .gitignore  .gitignore.orig  CHANGELOG.md  Dockerfile  Dockerfile (copy)  LICENCE.md  MANIFEST.in  Pipfile  README.md  Registration.py  __init__.py  __init__.py.bak  batch_binshrink.py  batch_invert_meshes.py  calculate_organ_size.py  common.py  common.py.orig  cube_means.py  cube_means.py.orig  deformations.py  elastix_registration.py  f  glcm3d.py  grid_runner.py  harwellimglib.py  imageprocessing.py  insert_baselines.py  install_LAMA.sh  install_elastix_R.sh  invert.py  isosurfaces.py  job_runner.py  lama.py  lama.py.save  lama_detect.py  lama_env.sh  lama_scheduler.py  meld  metric_charts.py  morpho_detect.py  (+36 more)
lama/: CMakeLists.txt  __init__.py  common.py  common.py.orig  monitor_memory.py  paths.py  pheno_detect.py  run_lama.py  setup.py  validate_config.py  version.py
lama/Windows/: setup_LAMA.bat
lama/docs/: temp.rst
lama/elastix/: __init__.py  deformations.py  elastix_registration.py  folding.py  invert.py  invert.py.bak  invert_transforms.py  invert_volumes.py  propagate_volumes.py  reverse_registration.py
lama/example_configs/: ark_pop_avg.toml  arkell_generate_data.toml  arkell_stats.toml  generate_data.toml  pop_avg.toml  population_average.yaml
lama/img_processing/: dicom_to_nrrd.sh  full_img_processor.sh  misc.py  normalise.py  normalise_background.py  organ_vol_calculation.py  pad.py  pad.py.bak  read_minc.py
lama/junk/: __init__.py  circular_stats.py  staging.py  temp_prepare_data.py  transformations.py  unpad_dimensions.py
lama/lama_radiomics/: feature_reduction.py  machine_learning.py  rad_plotting.py  radiomics.py
lama/lib/: addict.py
lama/qc/: collate_qc.py  collate_qc_new.py  common.py  folding.py  formatting.py  img_grid.py  interative_qc.py  metric_charts.py  organ_vol_plots.py  qc_images.py
lama/radiomics/: feature_reduction.py  machine_learning.py  radiomics.py
lama/registration_pipeline/: parallel_average.py  parallel_average_pairwise.py  run_lama.py  run_lama_configs_grid.py  validate_config.py
lama/scripts/: grid_jobrunner.py  intensity_normalisation.py  lama_ark_img_pro.py  lama_get_test_data.py  lama_get_walkthrough_data.py  lama_job_runner.py  lama_machine_learning.py  lama_permutation_stats.py  lama_radiomics_runner.py  lama_reg.py  lama_stats.py  two_way_plotter.py
lama/seg_methods/: external_hole_filler.py  mask.py  (+6 more)
(+1136 files in other folders)
